--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <header>
         <h3>Influencer Products</h3>
         <nav>
-            <a href="">Home</a>
-            <a href="">Products</a>
-            <a href="">Sign up</a>
-            <a href="">Log In</a>
-            <a href=""><i class="fas fa-search"></i></a>
-            <a href=""><i class="fas fa-shopping-cart"></i></a>
+            <a class="menu" href="">Home</a>
+            <a class="menu" href="">Products</a>
+            <a class="menu" href="">Sign up</a>
+            <a class="menu" href="">Log In</a>
+            <a class="menu" href=""><i class="fas fa-search"></i></a>
+            <a class="menu" href=""><i class="fas fa-shopping-cart"></i></a>
 
         </nav>
 
@@ -39,7 +39,7 @@
     <main>
         <!------ 1st section --------->
         <section class="flexible-sec">
-            <div class="1st-part">
+            <div class="st-part">
                 <h1>Start Your Journey As An Influencer</h1>
                 <p>Gear Influencer is one of the leading influencer marketing firms dating back to 2012. We pride ourselves with developing and delivering professional, highly strategic campaigns that elevate and deliver on your brands goals!</p>
                 <a class="preebooking-button" href="">Prebook Now<i class="fas fa-arrow-right arrow "></i> </a>
@@ -53,13 +53,13 @@
             <!-- 2nd section ----- -->
 
             <section class="sponsors">
-                <div><a href="#"><img src="logos/Alibaba.svg" alt=""></a></div>
-                <div><a href="#"><img src="logos/Amazon.svg" alt=""></a></div>
-                <div><a href="#"><img src="logos/Daraz.pk Logo.svg" alt=""></a></div>
-                <div><a href="#"><img src="logos/Ebay.svg" alt="" ></a></div>
-                <div><a href="#"><img src="logos/Rakuten.svg" alt=""></a></div>
-                <div><a href="#"><img src="logos/Target.svg" alt=""></a></div>
-                <div><a href="#"><img src="logos/Walmart.svg" alt=""></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Alibaba.svg" alt=""></a></div>
+                <div class="sponsor" ><a href="#"><img src="logos/Amazon.svg" alt=""></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Daraz.pk Logo.svg" alt=""></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Ebay.svg" alt="" ></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Rakuten.svg" alt=""></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Target.svg" alt=""></a></div>
+                <div class="sponsor"><a href="#"><img src="logos/Walmart.svg" alt=""></a></div>
                 
             </section>
        
